--- a/knownCards.json
+++ b/knownCards.json
@@ -386,7 +386,9 @@
     2673,
     2789,
     2802,
-    2938
+    2938,
+    2872,
+    2987
   ],
   "Hanayo": [
     35,
@@ -485,7 +487,8 @@
     2525,
     2650,
     2789,
-    2872
+    2872,
+    2987
   ],
   "idolizedHonoka": [
     28,
@@ -639,7 +642,8 @@
     2805,
     2858,
     2868,
-    2942
+    2942,
+    2985
   ],
   "Honoka": [
     28,
@@ -735,7 +739,8 @@
     2260,
     2297,
     2306,
-    2942
+    2942,
+    2985
   ],
   "idolizedKotori": [
     30,
@@ -880,7 +885,8 @@
     2827,
     2870,
     2945,
-    2946
+    2946,
+    2979
   ],
   "Kotori": [
     30,
@@ -1124,7 +1130,8 @@
     2801,
     2812,
     2828,
-    2871
+    2871,
+    2986
   ],
   "Maki": [
     33,
@@ -1224,7 +1231,8 @@
     2546,
     2649,
     2812,
-    2871
+    2871,
+    2986
   ],
   "idolizedNico": [
     36,
@@ -1373,7 +1381,8 @@
     2839,
     2848,
     2854,
-    2941
+    2941,
+    2980
   ],
   "Nico": [
     36,
@@ -1616,7 +1625,8 @@
     2808,
     2817,
     2838,
-    2860
+    2860,
+    2984
   ],
   "Nozomi": [
     34,
@@ -4156,7 +4166,8 @@
     2752,
     2755,
     2758,
-    2874
+    2874,
+    2982
   ],
   "Shizuku": [
     1,
@@ -7282,7 +7293,10 @@
     2944,
     2966,
     2967,
-    2968
+    2968,
+    2985,
+    2986,
+    2987
   ],
   "idolizedTransparent": [
     1,
@@ -10250,6 +10264,83 @@
     2967,
     2968,
     2969,
-    2970
+    2970,
+    2971,
+    2972,
+    2973,
+    2974,
+    2975,
+    2976,
+    2977,
+    2978,
+    2979,
+    2980,
+    2981,
+    2982,
+    2983,
+    2984,
+    2985,
+    2986,
+    2987
+  ],
+  "idolizedChisato": [
+    2867,
+    2895,
+    2900,
+    2905,
+    2910,
+    2915,
+    2951
+  ],
+  "Chisato": [
+    2867
+  ],
+  "idolizedRen": [
+    2887,
+    2897,
+    2902,
+    2907,
+    2912,
+    2917,
+    2981
+  ],
+  "Ren": [
+    2887
+  ],
+  "idolizedSumire": [
+    2857,
+    2896,
+    2901,
+    2906,
+    2911,
+    2916,
+    2939
+  ],
+  "Sumire": [
+    2857
+  ],
+  "idolizedKeke": [
+    2849,
+    2894,
+    2899,
+    2904,
+    2909,
+    2914,
+    2919
+  ],
+  "Keke": [
+    2849
+  ],
+  "idolizedKanon": [
+    2844,
+    2893,
+    2898,
+    2903,
+    2908,
+    2913,
+    2918
+  ],
+  "Kanon": [
+    2844
   ]
 }
